<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

<ProgressBar
    android:id="@+id/progerssDialog"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:visibility="gone"
    android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/primary_color"
            android:textSize="25sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/gray_color"
            android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/login_emailid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_color"
            android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/gray_color" />
       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:passwordToggleEnabled="true"
           android:hint="@string/passowrd"
           android:layout_marginTop="10dp"
           android:textColorHint="@color/gray_color"
           app:passwordToggleTint="@android:color/darker_gray">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="16dp"
            android:singleLine="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/darker_gray"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_color"
            android:textSize="16sp" />
       </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/gray_color" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/pin"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/gray_color"
            app:passwordToggleTint="@android:color/darker_gray">
        <EditText
            android:id="@+id/login_pin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/pin"
            android:inputType="textPassword"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_color"
            android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/gray_color" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:visibility="gone"
            android:paddingBottom="5dp">

            <CheckBox
                android:id="@+id/show_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_pwd"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:visibility="gone"
                android:text="@string/forgot"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/primary_color"
            android:padding="3dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:text="@string/newUser"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

 


</RelativeLayout>